Fix css in title info pages on mobile

--- a/public/css/pages/infos.css
+++ b/public/css/pages/infos.css
@@ -74,7 +74,7 @@
 
 @media (max-width: 650px) {
     .infos-title {
-        padding-top: 70px;
+        padding-top: 90px;
     }
 
     .infos-title h1 {
